fix contrast issues

--- a/scoots/css/contact/contact.css
+++ b/scoots/css/contact/contact.css
@@ -4,6 +4,9 @@ main{
 form{
     text-align: left;
 }
+main a{
+    color: #000000;
+}
 main h2{
     margin-top: 3rem;
     margin-bottom: 1rem;
@@ -59,7 +62,7 @@ form label.sbs {
 form input.submitBtn{
     border:none;
     background-color: #4F5D73;
-    color:#000000;
+    color:#ffffff;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
     margin: 0 0 2rem 2%;
