--- a/scoots/css/rentals/rentals.css
+++ b/scoots/css/rentals/rentals.css
@@ -39,7 +39,7 @@ main div section:hover{
     margin-left: auto;
     margin-right: auto;
     text-decoration: none;
-    color: #000000;
+    color: #ffffff;
     font-weight: bold;
 }
 .rentalDiv a:hover{
