--- a/scoots/css/reservations/reservations.css
+++ b/scoots/css/reservations/reservations.css
@@ -43,7 +43,7 @@ form label.sbs {
 form input.submitBtn{
     border:none;
     background-color: #4F5D73;
-    color:#000000;
+    color:#ffffff;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
     margin: 0 0 2rem 2%;
